--- a/vista/css/style.css
+++ b/vista/css/style.css
@@ -31,3 +31,112 @@ body{
    font-size:  1.5em;
    transition: 0.5s;
 }
+
+.formSimulador{
+    background: #1c1c1c;
+    width: 400px;
+    height: 450px;
+    border-radius: 8px;
+    color: white;
+    position: absolute;
+    left: 170px;
+    top: 20%;
+}
+
+.cerrar h2{
+    margin: 10px;
+    color:#45f3ff;
+    font-size: 30px;
+}
+
+.cerrar h2:hover{
+    transition: 1s;
+    font-size: 35px;
+}
+
+.cerrar a{
+    position: absolute;
+    right: 10px;
+    color: white;
+    font-size: 23px;
+    text-decoration: none;
+    right: 10px;
+}
+
+.cerrar a:hover{
+    color: #ff2770;
+   
+}
+
+.formSimulador form{
+    position: absolute;
+    background: #222;
+    inset: 4px;
+    padding: 30px 40px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.formSimulador form h2{
+    font-weight: 500;
+    color: white;
+    text-align: center;
+    letter-spacing: 0.1em;
+}
+
+.formSimulador form .inputBox{
+    position: relative;
+    width: 300px;
+    margin-top: 25px;
+}
+
+.formSimulador form .inputBox input{
+    position: relative;
+    width: 100%;
+    padding: 10px 10px 10px;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+}
+
+.formSimulador form .inputBox select{
+    position: relative;
+    width: 100%;
+    padding: 10px 10px 10px;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+}
+
+.formSimulador form .inputBox label{
+    color: white;
+    font-size: 1em;
+    letter-spacing: 0.1em;
+}
+
+.formSimulador form .buttons{
+    display: flex;
+    margin: 25px 0 ;
+    justify-content: space-between
+}
+
+.formSimulador form .buttons input[type="button"]{
+    position: relative;
+    padding: 8px 15px;
+    left:  50px;
+    border: none;
+    border-radius: 8px;
+    font-size: 1em;
+}
+
+.formSimulador form .buttons input[type="button"]:hover{
+    background: #45f3ff;
+}
+
