--- a/vista/css/style.css
+++ b/vista/css/style.css
@@ -32,17 +32,6 @@ body{
    transition: 0.5s;
 }
 
-.formSimulador{
-    background: #1c1c1c;
-    width: 400px;
-    height: 450px;
-    border-radius: 8px;
-    color: white;
-    position: absolute;
-    left: 170px;
-    top: 20%;
-}
-
 .cerrar h2{
     margin: 10px;
     color:#45f3ff;
@@ -68,32 +57,77 @@ body{
    
 }
 
+.formSimulador{
+    background: #1c1c1c;
+    width: 500px;
+    height: 550px;
+    border-radius: 8px;
+    color: white;
+    position: absolute;
+    left: 120px;
+    top: 65px;
+}
+
+.formSimuladorHi{
+    background: #1c1c1c;
+    align-items: center;
+    width: 500px;
+    height: 550px;
+    border-radius: 8px;
+    color: white;
+    position: absolute;
+    left: 750px;
+    top: 65px;
+}
+
+.formSimuladorHi form,
 .formSimulador form{
     position: absolute;
-    background: #222;
     inset: 4px;
-    padding: 30px 40px;
+    padding: 25px 40px;
     z-index: 2;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
+
 
 .formSimulador form h2{
     font-weight: 500;
-    color: white;
+    font-size: 25px;
+    color: #ff2770;
     text-align: center;
     letter-spacing: 0.1em;
 }
 
+.formSimuladorHi form h2{
+    font-weight: 500;
+    font-size: 25px;
+    color: #45f3ff;
+    text-align: center;
+    letter-spacing: 0.1em;
+}
+
+.formSimuladorHi form .inputBox,
 .formSimulador form .inputBox{
     position: relative;
     width: 300px;
     margin-top: 25px;
 }
 
+.formSimuladorHi form .valCuota,
+.formSimulador form .valCuota{
+    position: relative;
+    width: 300px;
+
+}
+
+.formSimuladorHi form .inputBox input,
+.formSimuladorHi form .valCuota input,
+.formSimulador form .valCuota input,
 .formSimulador form .inputBox input{
     position: relative;
-    width: 100%;
+    min-width: 100%;
     padding: 10px 10px 10px;
     font-size: 1em;
     letter-spacing: 0.05em;
@@ -103,6 +137,7 @@ body{
     border-radius: 4px;
 }
 
+.formSimuladorHi form .inputBox select,
 .formSimulador form .inputBox select{
     position: relative;
     width: 100%;
@@ -115,19 +150,27 @@ body{
     border-radius: 4px;
 }
 
+.formSimuladorHi form .inputBox label,
+.formSimuladorHi form .valCuota label,
+.formSimulador form .valCuota label,
 .formSimulador form .inputBox label{
     color: white;
     font-size: 1em;
+    text-align: center;
     letter-spacing: 0.1em;
 }
 
+.formSimuladorHi form .buttons,
 .formSimulador form .buttons{
     display: flex;
-    margin: 25px 0 ;
-    justify-content: space-between
+    margin: 20px 0;
+    left: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
-.formSimulador form .buttons input[type="button"]{
+.formSimuladorHi form .buttons input[type="submit"],
+.formSimulador form .buttons input[type="submit"]{
     position: relative;
     padding: 8px 15px;
     left:  50px;
@@ -136,7 +179,11 @@ body{
     font-size: 1em;
 }
 
-.formSimulador form .buttons input[type="button"]:hover{
+.formSimulador form .buttons input[type="submit"]:hover{
     background: #45f3ff;
+}
+
+.formSimuladorHi form .buttons input[type="submit"]:hover{
+    background: #ff2770;
 }
 
